# exchange-rate-notifier

./: .coverage  .env.sample  .gitignore  .tool-versions  Makefile  README.md  exchange_rates.json  pyproject.toml  requirements.txt  script.py
.github/workflows/: check-and-notify.yml  code-style.yml  schedule.yml  tests.yml  timezone-change-detection.yml
src/: email_client.py  script.py  timezone-change-notifier.py
src/notifications/: __init__.py  manager.py
src/rates/: __init__.py  aggregation.py  http_client.py  models.py  service.py
src/rates/providers/: __init__.py  apilayer_exchangeratesapi.py  bank_al_maghrib.py  base.py  currencyapi.py  exchangerate_api.py  fawazahmed0_exchange_api.py  openexchangerates.py  template.py
tests/: conftest.py  test_script.py
tests/test_notifications/: test_manager.py
tests/test_rates/: test_aggregation.py  test_http_client.py  test_service.py
tests/test_rates/providers/: test_apilayer_exchangeratesapi.py  test_bank_al_maghrib.py  test_currencyapi.py  test_exchangerate_api.py  test_fawazahmed0_exchange_api.py  test_openexchangerates.py
