[tool.poetry]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "0.28.1"
python-dotenv = "1.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.11"
flake8 = "7.1"
black = "24.4"
isort = "5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
