[tool.poetry]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "0.28.1"
python-dotenv = "1.0"
apprise = "^1.8"

[tool.poetry.group.dev.dependencies]
mypy = "1.11"
flake8 = "7.1"
black = "24.4"
isort = "5.13"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-mock = "^3.12"
respx = "^0.21"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
mypy_path = ["src"]
